# HotSinglesInYourArea

./: .gitignore  README.md  constants.py  pyproject.toml  requirements.txt  setup.py
src/: cli.py  main.py
src/dependencies/: click.py
src/dependencies/rapidfuzz/: processor.py
src/dependencies/spotify/: utils.py
src/dependencies/spotify/models/: __init__.py  album.py  artist.py  spotify_base_model.py  track.py  type.py
src/dependencies/wikipedia/: utils.py
src/dependencies/wikipedia/models/: __init__.py  single.py
